# ffxiv_automated_collectible_tracker

./: .gitignore  README.md  act.py  pyproject.toml  sample_characters.yaml  sample_config.yaml
ffxiv_automated_collectible_tracker/: command_line_interface.py  ffxiv_gsheet_updater.py  gsheets.py  lodestone.py
